# glotter2-core

./: .buildinfo  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.txt  Makefile  README.md  REQUIREMENTS.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api.doctree  environment.pickle  index.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: makefile.yml
_modules/: index.html
_modules/glotter/core/: project.html  (+3 more)
_modules/glotter_core/: project.html  settings.html  source.html  testinfo.html
_sources/: api.rst.txt  index.rst.txt
doc/: api.rst  conf.py  index.rst
html_cov/: class_index.html  function_index.html  index.html  status.json  z_3d97ce1dc20e900f___init___py.html  z_3d97ce1dc20e900f_project_py.html  z_3d97ce1dc20e900f_settings_py.html  z_3d97ce1dc20e900f_source_py.html  z_3d97ce1dc20e900f_testinfo_py.html  z_95e55c4534673762___init___py.html  z_95e55c4534673762_project_py.html  z_95e55c4534673762_settings_py.html  z_95e55c4534673762_source_py.html  z_95e55c4534673762_testinfo_py.html
src/glotter_core/: project.py  settings.py  source.py  testinfo.py
test/: conftest.py  test_glotter2_core.py  test_project.py  test_settings.py  test_source.py  test_testinfo.py
test/data/: bad_glotter.yml  bad_glotter_acronym_scheme.yml  bad_glotter_projects.yml  bad_glotter_settings.yml  empty_glotter.json  good_glotter.json  good_glotter.yml  good_glotter_with_source_and_acronyms.json  good_glotter_with_source_and_acronyms.yml
(+20 files in other folders)
