[project]
name = "glotter2-core"
version = "0.1.0"
description = "A simple, lightweight core library glotter2"
readme = "README.md"
authors = [
    { name = "rzuckerm" }
]
requires-python = ">=3.9,<4.0"
license = {text = "LICENSE.txt"}
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pyyaml>=6.0.3,<7.0.0",
]

[dependency-groups]
dev = [
    "coverage>=7.10.7,<8.0.0",
    "genbadge[coverage]>=1.1.3,<2.0.0",
    "pytest>=8.4.2,<9.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "ruff>=0.14.14,<0.15.0",
    "sphinx>=7.4.7,<8.0.0",
    "sphinx-rtd-theme>=3.1.0,<4.0.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "glotter.core"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "PL", "RUF", "T10", "W"]
ignore = ["PLR2004"]
